tests/ui/self_type_and_receiver.stderr
error: self type and receiver are mutually exclusive
 --> tests/ui/self_type_and_receiver.rs:7:9
  |
7 |         fn method(self: &T);
  |         ^^^^^^^^^^^^^^^^^^^^
